Prevent button text overflow

--- a/pages/_app.css
+++ b/pages/_app.css
@@ -83,3 +83,8 @@ a {
   margin-top: 1em;
   margin-bottom: 1em;
 }
+
+.MuiButton-root {
+  max-width: 100%;
+  overflow: hidden;
+}
